[package]
name = "nail_lexer"
version = "0.1.0"
authors = ["Luke De Mouy <lukedemouy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Local
nail_common = { path = "../nail_common" }
# Remote
serde = { version = "~1", features = ["derive"] }
