[package]
name = "nail_tui"
version = "0.1.0"
authors = ["Luke De Mouy <lukedemouy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Local
nail_core = { path = "../nail_core" }
nail_lexer = { path = "../nail_lexer" }
# Remote
serde = { version = "~1", features = ["derive"] }
crossbeam = "0.8"
